syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.User";
package CecoChat.Contracts.User;
import "google/protobuf/timestamp.proto";

service FileCommand {
  rpc AssociateFile(AssociateFileRequest) returns (AssociateFileResponse);
}

message AssociateFileRequest {
  string bucket = 1;
  string path = 2;
}

message AssociateFileResponse {
  bool success = 1;
  google.protobuf.Timestamp version = 2;
  bool duplicate = 3;
}
